# shumai-cxai

./: Cargo.toml
src/: lib.rs  main.rs  message.rs  model.rs  model_settings.rs  phi4.rs  quantized_phi3.rs
