[package]
name = "shumai-cxai"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.2", features = ["cuda"] }
candle-examples = { git = "https://github.com/huggingface/candle.git", version = "0.8.2" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.8.2" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.8.2" }
clap = "4.5.27"
hf-hub = "0.4.1"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
tokenizers = { version = "0.19.1", default-features = false }